--- a/layer/serverless.yml
+++ b/layer/serverless.yml
@@ -7,6 +7,11 @@ provider:
   region: ap-northeast-1
   profile: serverless
 
+package:
+  exclude:
+    - .gitkeep
+    - Dockerfile
+
 layers:
   selenium:
     path: selenium
